istio/demoyaml/tanjunchen/vs/tanjunchen-vs-condition.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-svc-vs
  namespace: tanjunchen
spec:
  hosts:
  - web-svc.tanjunchen.svc.cluster.local
  http:
  - match:
    - headers:
        end-user:
          exact: tanjunchen
    route:
      - destination:
          host: tomcat-svc.tanjunchen.svc.cluster.local
  - route:
    - destination:
        host: httpd-svc.tanjunchen.svc.cluster.local
